test/testcase/version_1/pass/track-extension.xspf
<?xml version="1.0" encoding="utf-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList>
		<track>
			<extension application="http://localhost/some/valid/url">
				<info>Does NOT have to be an URL</info>
				<info>And can appear more than once</info>
			</extension>
		</track>
	</trackList>
</playlist>
